ncurses (6.3+20220423-1) UNRELEASED; urgency=medium

  * New upstream patchlevel.
  * Ensure that the README file in ncurses-examples has correct
    permissions (Closes: #1003929).
  * Add a lintian override to ncurses-examples for a false positive
    bash-term-in-posix-shell in tput-initc.

 -- Sven Joachim <svenjoac@gmx.de>  Wed, 19 Jan 2022 17:41:28 +0100

ncurses (6.3-2) unstable; urgency=medium

  * Add Breaks on neovim (<< 0.6.0) to ncurses-base (Closes: #999777).
  * Drop patch 02-debian-drop-rin-from-screen-256color.diff
    (Closes: #1003546).  Tmux users should upgrade to version 3.0 or
    higher, or set TERM to something else than screen-256color.
  * Make ncurses-base the primary package into which the Debian FAQ
    and TODO files are installed.
  * Add libmd-dev to Build-Depends on kfreebsd-any to work around FTBFS
    if /usr/lib/$(DEB_HOST_MULTIARCH)/pkgconfig does not exist.
  * Install the example programs into /usr/libexec/ncurses-examples.

 -- Sven Joachim <svenjoac@gmx.de>  Mon, 17 Jan 2022 18:02:04 +0100

ncurses (6.3-1) unstable; urgency=medium

  * New upstream release.
  * Update symbols files and bump shlibs.
    - Update the minimal version for symbols added after the 6.2 release
      to 6.3.
  * Drop the lintian override for ncurses-examples introduced in version
    6.1+20181013-2, it no longer triggers.
  * Do not force removal of obsolete packages which terminfo files have
    been taken over by ncurses-term (Closes: #994433).

 -- Sven Joachim <svenjoac@gmx.de>  Mon, 15 Nov 2021 17:54:06 +0100

ncurses (6.2+20210905-1) unstable; urgency=low

  * New upstream patchlevel.
    - Extend --disable-pkg-ldflags option to also control whether
      $LDFLAGS from the build is provided in -config and .pc files.
      Use that option in debian/rules (Closes: #986764).
    - Drop symbols GCC_PRINTF and GCC_SCANF from curses.h.in, to
      simplify use (Closes: #993179).
  * Drop patch 02-fix-mlterm.diff, applied upstream.