@@ -1,6 +1,7 @@
 ncurses (6.3+20220423-1) UNRELEASED; urgency=medium
 
   * New upstream patchlevel.
+  * Refresh Debian patches.
   * Ensure that the README file in ncurses-examples has correct
     permissions (Closes: #1003929).
   * Add a lintian override to ncurses-examples for a false positive
